<resources>
    <string name="open_menu">open</string>
    <string name="close_menu">close</string>
    <string name="app_name">Трекер привычек</string>
    <string name="text_empty_list_habit">Список привычек пуст</string>
    <string name="enter_new_habit_text">Введите новую привычку</string>
    <string name="edit_new_habit_text">Отредактируйте вашу привычку</string>

    <string name="enter_name_habit_edit">Введите название привычки</string>
    <string name="enter_description_habit_edit">Введите описание привычки</string>
    <string name="selected_priority_spiner">Выбирите приоритет</string>
    <string name="good_habit_type_radio_text">Хорошая привычка</string>
    <string name="negative_habit_type_radio_text">Плохая привычка</string>
    <string name="number_execution_text_edit">Количество выполнения привычки</string>
    <string name="period_habit_text_edit">Период выполения привычки, например:в день</string>
    <string name="selected_color_text">Выбраный вами цвет:</string>
    <string name="color_hsv_text">Цвет HSV:</string>
    <string name="color_rgb_text">Цвет RGB:</string>
    <string name="add_button_text">Добавить привычку</string>
    <string name="edit_button_text">Редактировать</string>
    <string name="simple_text_name_habit">Название привычки</string>
    <string name="simple_text_description_habit">Описание привычки</string>
    <string name="simple_text_type_habit">Тип привычки</string>
    <string name="simple_textfrequancy_habit">Частота повторений</string>
    <string name="simple_text_priority_habit">Приоритет привычки</string>
    <string name="name_user_text">Name User</string>
    <string name="text_user_exemple_com">user@exemple.com</string>
    <string name="text_about_app">Экран о приложении</string>
    <string name="text_sort_and_filter">Сортировака и фильтрация</string>
    <string name="text_sort_by_name">Сортировка по названию привычки</string>
    <string name="text_choose_type_sort">Выбирите тип сортировки</string>
    <string name="text_filter_by_name">Фильтр по названию</string>
    <string name="text_enter_name_habit">Начните вводить название привычки</string>
    <string name="menu_home_page">Home page</string>
    <string name="menu_about">About</string>
    <string name="text_name_fragment_habit_edit">Редактирование/Добовление привычки</string>
    <string name="text_name_about_fragment">О приложении</string>


</resources>