<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/teal_700"
        android:textSize="20sp"
        android:text="@string/text_sort_and_filter"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sort_by_name"
        android:layout_marginTop="8dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/spinerSortedLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_choose_type_sort"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/spinerSorted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_filter_by_name"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filterNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_enter_name_habit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filterNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>



</LinearLayout>